[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets/Sprites/flag-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/effects/flag_particle.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Gameplay/Checkpoint.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 7 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "active",
"speed": 10.0
} ]

[node name="Checkpoint" type="Area2D" groups=[
"Checkpoint",
]]
z_index = -1
monitorable = false
collision_layer = 0
collision_mask = 4
script = ExtResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="FlagSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 11 )
playing = true

[node name="FlagParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
texture = ExtResource( 2 )
direction = Vector2( 0, -1 )
spread = 20.0
initial_velocity = 60.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Checkpoint_body_entered"]
